src/objects/Networks_With_Codes__mdt.object
<CustomObject>
    <fields>
        <fullName>Network_Code__c</fullName>
        <label>Network Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Name__c</fullName>
        <label>Network Name</label>
        <length>160</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <label>Plan Id</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL1</fullName>
                    <default>true</default>
                    <label>IL1</label>
                </value>
                <value>
                    <fullName>MT1</fullName>
                </value>
                <value>
                    <fullName>NM1</fullName>
                </value>
                <value>
                    <fullName>OK1</fullName>
                </value>
                <value>
                    <fullName>TX1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Networks &amp; Codes</label>
    <pluralLabel>Networks &amp; Codes</pluralLabel>
</CustomObject>